# relic

./: .editorconfig  .gitignore  Cargo.toml  LICENCE-MIT  README.md  build.rs  exports.exp  index.html  program  program.c
.cargo/: config.toml
.github/workflows/: coverage.yml  deploy.yml  rust-clippy.yml  test.yml
c_runtime/: .gitignore  Makefile  run_tests.py  runtime.h
examples/: 3.27.lisp  3.36.lisp  3.63.lisp  4.25.lisp  README.md  hello.lisp  interpreter.lisp  loop.lisp  monoidal.lisp  repl.lisp
examples/sdl2/: Makefile  demo.lisp  sdl2.c  turtle.lisp
lib/: .gitignore  README.md  function.lisp  list.lisp
pkg/: relic.d.ts  relic.js  relic_bg.wasm  relic_bg.wasm.d.ts
src/: compile.rs  env.rs  error.rs  eval.rs  graph.rs  lexer.rs  lib.rs  logger.rs  main.rs  node.rs  number.rs  package.rs  parser.rs  preprocess.rs  repl_complete.rs  runtime.rs  symbol.rs  util.rs
tests/: app_test.rs  compile_test.rs  eval_test.rs  lexer_test.rs  parser_test.rs  runtime_test.rs  test.c
