[package]
name = "relic"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
stacker = "0.1.21"
libloading = "0.8.8"

[dev-dependencies]
serial_test = "3.0"
